# nostr-intel-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  fly.toml  nostr-intel-mcp-prompt-v2.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  main.rs  server.rs
src/nostr/: cache.rs  client.rs  mod.rs  search.rs
src/payment/: free_tier.rs  l402.rs  mod.rs  nwc_gateway.rs  x402.rs
src/tools/: free.rs  mod.rs  paid.rs
static/: index.html
